--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "dev:api": "convex dev",
     "dev:client": "next dev --turbopack",
     "build": "next build --turbopack",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,md}\"",
     "start": "next start",
     "lint": "eslint"
   },
@@ -31,6 +33,7 @@
     "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "prettier": "3.6.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
