feat: maintenance feature

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
       }
     ],
     "paths": {
+      "@generated/*": ["./generated/*"],
+      "@convex/*": ["./convex/*"],
       "@/*": ["./src/*"]
     }
   },
