--- a/mobile/package.json
+++ b/mobile/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --port 8081 --no-dev-client",
+    "start": "expo start --port 8081",
     "start:web": "expo start --web",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
@@ -32,6 +32,8 @@
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-manipulator": "^14.0.7",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.6",
