feat: integrate QR scanning functionality and enhance asset management
- Added QRScanner component for scanning asset QR codes in asset check-in and check-out screens.
- Implemented asset check-in and check-out screens with QR code scanning capabilities, improving user experience.
- Updated app.json to include expo-camera and expo-barcode-scanner dependencies for camera functionalities.
- Enhanced asset management features by introducing new types for checked out assets and updating related queries and mutations.
- Refactored existing screens to support new functionalities and improve overall code organization.

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -29,6 +29,12 @@
       "bundler": "metro"
     },
     "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera for scanning QR codes and taking photos"
+        }
+      ],
       "expo-router",
       [
         "expo-splash-screen",
