--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,6 +28,8 @@
     "convex": "^1.27.0",
     "expo": "54.0.8",
     "expo-auth-session": "^7.0.8",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
