--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-query": "^5.89.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.27.0",
@@ -32,7 +33,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "svix": "^1.76.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "viem": "2.x",
+    "wagmi": "^2.17.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
