--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^2.15.0",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/datetimepicker": "^8.4.5",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -31,6 +32,7 @@
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.9",
+    "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
