--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.15.0",
+    "@convex-dev/expo-push-notifications": "^0.2.6",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-navigation/bottom-tabs": "^7.4.0",
@@ -31,7 +32,8 @@
     "expo-auth-session": "^7.0.8",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^17.0.8",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "^18.0.9",
+    "expo-device": "^8.0.8",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -40,6 +42,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "^0.32.11",
     "expo-router": "~6.0.6",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
