feat: add @convex-dev/expo-push-notifications dependency
- Introduced @convex-dev/expo-push-notifications version 0.2.6 in package.json and bun.lock to enhance push notification capabilities for the application.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@bprogress/core": "^1.3.4",
     "@bprogress/next": "^3.2.12",
     "@clerk/nextjs": "^6.32.0",
+    "@convex-dev/expo-push-notifications": "^0.2.6",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
