--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,20 +15,28 @@
     "@clerk/clerk-expo": "^2.15.0",
     "@convex-dev/expo-push-notifications": "^0.2.6",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-picker/picker": "^2.11.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@reown/appkit-auth-wagmi-react-native": "^1.3.2",
+    "@reown/appkit-wagmi-react-native": "^1.3.2",
     "@rn-primitives/collapsible": "^1.2.0",
     "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/portal": "^1.3.0",
     "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@tanstack/react-query": "^5.90.2",
+    "@walletconnect/react-native-compat": "^2.21.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.27.0",
     "expo": "54.0.8",
+    "expo-application": "^7.0.7",
     "expo-auth-session": "^7.0.8",
     "expo-barcode-scanner": "^13.0.1",
     "expo-camera": "^17.0.8",
@@ -57,15 +65,21 @@
     "react-native": "0.81.4",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-mmkv": "^3.3.1",
+    "react-native-modal": "14.0.0-rc.1",
     "react-native-reanimated": "^4.1.0",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.13.0",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "^13.16.0",
     "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.37.8",
+    "wagmi": "^2.17.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
