--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.27.3",
     "date-fns": "^4.1.0",
+    "ethers": "^6.15.0",
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
@@ -51,6 +52,7 @@
     "sonner": "^2.0.7",
     "svix": "^1.76.1",
     "tailwind-merge": "^3.3.1",
+    "viem": "^2.37.8",
     "xlsx": "^0.18.5",
     "zod": "^4.1.9",
     "zustand": "^5.0.8"
