feat: update framer-motion and add new asset maintenance features
- Updated framer-motion to version 12.23.21 in package.json and bun.lock for improved animation capabilities.
- Introduced new queries and mutations for managing assets nearing maintenance and assigning maintenance tasks in the convex API.
- Enhanced asset management functionality by adding new handlers and exports for asset maintenance operations.
- Improved UI components across various pages to utilize framer-motion for smoother transitions and animations, enhancing user experience.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "convex": "^1.27.3",
     "date-fns": "^4.1.0",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.21",
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
