--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "convex": "^1.27.3",
     "date-fns": "^4.1.0",
     "ethers": "^6.15.0",
+    "framer-motion": "^12.23.21",
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
@@ -48,6 +49,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-resizable-panels": "^3.0.6",
     "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "svix": "^1.76.1",
