--- a/mobile/package.json
+++ b/mobile/package.json
@@ -66,6 +66,7 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^3.3.1",
     "react-native-modal": "14.0.0-rc.1",
     "react-native-reanimated": "^4.1.0",
